Solves task 3
