# gateway/openapi.yml
@@ -138,7 +138,115 @@ paths:
                 example: session=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJ1c2VybmFtZSI6Iml2YW5faXZhbm92IiwidGltZXN0YW1wIjoxMjM0NTY3ODl9.0TPDykRjLo4o2Px_mBNoiFMlgzXpl5SSibmGjX1yR7g
         '403':
           description: Wrong login or password
-
+  /post:
+    post:
+      summary: Create a post
+      description: Creates a post from given data
+      operationId: createPost
+      requestBody:
+        description: Post information
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                name:
+                  type: string
+                  example: post_name
+                description:
+                  type: string
+                  example: this post is about smth smth
+                is_private:
+                  type: boolean
+                  example: false
+      security:
+        - cookieAuth: []
+      responses:
+        '200':
+          description: Successful operation
+  /post/{post_id}:
+    get:
+      summary: Get post by id
+      description: Get post by id
+      operationId: getPostByID
+      parameters:
+        - name: post_id
+          in: path
+          description: The id of the post
+          required: true
+          schema:
+            type: integer
+      responses:
+        '200': 
+          description: Successful operation
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Post'
+        '403':
+          description: Not enough permissions to read this post data
+        '404':
+          description: Post not found
+      security:
+        - cookieAuth: []
+    put:
+      summary: Change post information
+      description: Change post information
+      operationId: updatePost
+      parameters:
+        - name: post_id
+          in: path
+          description: The id of the post
+          required: true
+          schema:
+            type: string
+      requestBody:
+        description: Details of the post to be changed
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/Post'
+      responses:
+        '200': 
+          description: Successful operation
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/User'
+        '400':
+          description: Wrong format of a parameter
+        '403':
+          description: Not enough permissions to update this user data
+      security:
+        - cookieAuth: []
+  /post/page/{from}/{limit}:
+    get:
+      summary: Get paginated posts
+      description: Get posts from given id and limit the number of returned posts
+      operationId: getPostsPage
+      parameters:
+        - name: from
+          in: path
+          description: The id of the starting post
+          required: true
+          schema:
+            type: integer
+        - name: limit
+          in: path
+          description: The number of retunred posts
+          required: true
+          schema:
+            type: integer
+      responses:
+        '200': 
+          description: Successful operation
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Post'
+      security:
+        - cookieAuth: []
 components:
   securitySchemes:
     cookieAuth:
@@ -169,3 +277,31 @@ components:
         phone:
           type: string
           example: 81234567890
+    Post:
+      type: object
+      properties:
+        post_id:
+          type: integer
+          format: int64
+          example: 3
+        name:
+          type: string
+          example: post_name
+        description:
+          type: string
+          example: This post is about smth smth
+        creator_id:
+          type: integer
+          format: int32
+          example: 1234
+        creation_time:
+          type: string
+          format: time
+        update_time:
+          type: string
+          format: time
+        is_private:
+          type: boolean
+          example: false
+        tags:
+          type: 
